# restaurant_api

./: README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  database.py  main.py
app/models/: client.py  ingredient.py  order_item.py  user.py
app/routes/: __init__.py  auth.py  clients.py  inventory.py  menu.py  orders.py  payments.py  reservations.py  tables.py  users.py
app/schemas/: __init__.py  client.py  modifier.py  order.py  payment.py  reservation.py  table.py  user.py
app/services/: client_service.py  inventory_service.py  menu_service.py  order_service.py  reservation_service.py  table_service.py  user_service.py
app/utils/: dependencies.py  helpers.py  security.py
